[API] Add categories for the products